// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing _classicalRegister register with label offset 1`] = `
<g>
  <line
    class="register-classical"
    x1="11"
    x2="11"
    y1="10"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="9"
    y1="10"
    y2="21"
  />
  <line
    class="register-classical"
    x1="11"
    x2="100"
    y1="19"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="100"
    y1="21"
    y2="21"
  />
</g>
`;

exports[`Testing _classicalRegister register with label offset 2`] = `
<g>
  <line
    class="register-classical"
    x1="11"
    x2="11"
    y1="10"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="9"
    y1="10"
    y2="21"
  />
  <line
    class="register-classical"
    x1="11"
    x2="100"
    y1="19"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="100"
    y1="21"
    y2="21"
  />
</g>
`;

exports[`Testing _classicalRegister register with label offset 3`] = `
<g>
  <line
    class="register-classical"
    x1="11"
    x2="11"
    y1="10"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="9"
    y1="10"
    y2="21"
  />
  <line
    class="register-classical"
    x1="11"
    x2="100"
    y1="19"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="100"
    y1="21"
    y2="21"
  />
</g>
`;

exports[`Testing _classicalRegister register with large width 1`] = `
<g>
  <line
    class="register-classical"
    x1="11"
    x2="11"
    y1="10"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="9"
    y1="10"
    y2="21"
  />
  <line
    class="register-classical"
    x1="11"
    x2="500"
    y1="19"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="500"
    y1="21"
    y2="21"
  />
</g>
`;

exports[`Testing _classicalRegister register with large width 2`] = `
<g>
  <line
    class="register-classical"
    x1="11"
    x2="11"
    y1="10"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="9"
    y1="10"
    y2="21"
  />
  <line
    class="register-classical"
    x1="11"
    x2="500"
    y1="19"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="500"
    y1="21"
    y2="21"
  />
</g>
`;

exports[`Testing _classicalRegister register with large width 3`] = `
<g>
  <line
    class="register-classical"
    x1="11"
    x2="11"
    y1="10"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="9"
    y1="10"
    y2="21"
  />
  <line
    class="register-classical"
    x1="11"
    x2="500"
    y1="19"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="500"
    y1="21"
    y2="21"
  />
</g>
`;

exports[`Testing _classicalRegister register with normal width 1`] = `
<g>
  <line
    class="register-classical"
    x1="11"
    x2="11"
    y1="10"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="9"
    y1="10"
    y2="21"
  />
  <line
    class="register-classical"
    x1="11"
    x2="100"
    y1="19"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="100"
    y1="21"
    y2="21"
  />
</g>
`;

exports[`Testing _classicalRegister register with normal width 2`] = `
<g>
  <line
    class="register-classical"
    x1="11"
    x2="11"
    y1="10"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="9"
    y1="10"
    y2="21"
  />
  <line
    class="register-classical"
    x1="11"
    x2="100"
    y1="19"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="100"
    y1="21"
    y2="21"
  />
</g>
`;

exports[`Testing _classicalRegister register with normal width 3`] = `
<g>
  <line
    class="register-classical"
    x1="11"
    x2="11"
    y1="10"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="9"
    y1="10"
    y2="21"
  />
  <line
    class="register-classical"
    x1="11"
    x2="100"
    y1="19"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="100"
    y1="21"
    y2="21"
  />
</g>
`;

exports[`Testing _classicalRegister register with small width 1`] = `
<g>
  <line
    class="register-classical"
    x1="11"
    x2="11"
    y1="10"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="9"
    y1="10"
    y2="21"
  />
  <line
    class="register-classical"
    x1="11"
    x2="5"
    y1="19"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="5"
    y1="21"
    y2="21"
  />
</g>
`;

exports[`Testing _classicalRegister register with small width 2`] = `
<g>
  <line
    class="register-classical"
    x1="11"
    x2="11"
    y1="10"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="9"
    y1="10"
    y2="21"
  />
  <line
    class="register-classical"
    x1="11"
    x2="5"
    y1="19"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="5"
    y1="21"
    y2="21"
  />
</g>
`;

exports[`Testing _classicalRegister register with small width 3`] = `
<g>
  <line
    class="register-classical"
    x1="11"
    x2="11"
    y1="10"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="9"
    y1="10"
    y2="21"
  />
  <line
    class="register-classical"
    x1="11"
    x2="5"
    y1="19"
    y2="19"
  />
  <line
    class="register-classical"
    x1="9"
    x2="5"
    y1="21"
    y2="21"
  />
</g>
`;

exports[`Testing _qubitRegister register with label offset 1`] = `
<g>
  <line
    x1="40"
    x2="100"
    y1="20"
    y2="20"
  />
  <text
    dominant-baseline="hanging"
    font-size="75%"
    text-anchor="start"
    x="40"
    y="20"
  >
    q0
  </text>
</g>
`;

exports[`Testing _qubitRegister register with label offset 2`] = `
<g>
  <line
    x1="40"
    x2="100"
    y1="20"
    y2="20"
  />
  <text
    dominant-baseline="hanging"
    font-size="75%"
    text-anchor="start"
    x="40"
    y="15"
  >
    q1
  </text>
</g>
`;

exports[`Testing _qubitRegister register with label offset 3`] = `
<g>
  <line
    x1="40"
    x2="100"
    y1="20"
    y2="20"
  />
  <text
    dominant-baseline="hanging"
    font-size="75%"
    text-anchor="start"
    x="40"
    y="-30"
  >
    q2
  </text>
</g>
`;

exports[`Testing _qubitRegister register with large width 1`] = `
<g>
  <line
    x1="40"
    x2="500"
    y1="20"
    y2="20"
  />
  <text
    dominant-baseline="hanging"
    font-size="75%"
    text-anchor="start"
    x="40"
    y="4"
  >
    q0
  </text>
</g>
`;

exports[`Testing _qubitRegister register with large width 2`] = `
<g>
  <line
    x1="40"
    x2="500"
    y1="20"
    y2="20"
  />
  <text
    dominant-baseline="hanging"
    font-size="75%"
    text-anchor="start"
    x="40"
    y="4"
  >
    q1
  </text>
</g>
`;

exports[`Testing _qubitRegister register with large width 3`] = `
<g>
  <line
    x1="40"
    x2="500"
    y1="20"
    y2="20"
  />
  <text
    dominant-baseline="hanging"
    font-size="75%"
    text-anchor="start"
    x="40"
    y="4"
  >
    q2
  </text>
</g>
`;

exports[`Testing _qubitRegister register with normal width 1`] = `
<g>
  <line
    x1="40"
    x2="100"
    y1="20"
    y2="20"
  />
  <text
    dominant-baseline="hanging"
    font-size="75%"
    text-anchor="start"
    x="40"
    y="4"
  >
    q0
  </text>
</g>
`;

exports[`Testing _qubitRegister register with normal width 2`] = `
<g>
  <line
    x1="40"
    x2="100"
    y1="20"
    y2="20"
  />
  <text
    dominant-baseline="hanging"
    font-size="75%"
    text-anchor="start"
    x="40"
    y="4"
  >
    q1
  </text>
</g>
`;

exports[`Testing _qubitRegister register with normal width 3`] = `
<g>
  <line
    x1="40"
    x2="100"
    y1="20"
    y2="20"
  />
  <text
    dominant-baseline="hanging"
    font-size="75%"
    text-anchor="start"
    x="40"
    y="4"
  >
    q2
  </text>
</g>
`;

exports[`Testing _qubitRegister register with small width 1`] = `
<g>
  <line
    x1="40"
    x2="5"
    y1="20"
    y2="20"
  />
  <text
    dominant-baseline="hanging"
    font-size="75%"
    text-anchor="start"
    x="40"
    y="4"
  >
    q0
  </text>
</g>
`;

exports[`Testing _qubitRegister register with small width 2`] = `
<g>
  <line
    x1="40"
    x2="5"
    y1="20"
    y2="20"
  />
  <text
    dominant-baseline="hanging"
    font-size="75%"
    text-anchor="start"
    x="40"
    y="4"
  >
    q1
  </text>
</g>
`;

exports[`Testing _qubitRegister register with small width 3`] = `
<g>
  <line
    x1="40"
    x2="5"
    y1="20"
    y2="20"
  />
  <text
    dominant-baseline="hanging"
    font-size="75%"
    text-anchor="start"
    x="40"
    y="4"
  >
    q2
  </text>
</g>
`;

exports[`Testing formatRegisters 1 quantum register 1`] = `
<g>
  <g>
    <line
      x1="40"
      x2="180"
      y1="40"
      y2="40"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="24"
    >
      q0
    </text>
  </g>
</g>
`;

exports[`Testing formatRegisters 1 quantum register 2`] = `
<g>
  <g>
    <line
      x1="40"
      x2="85"
      y1="40"
      y2="40"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="24"
    >
      q0
    </text>
  </g>
</g>
`;

exports[`Testing formatRegisters 1 quantum register 3`] = `
<g>
  <g>
    <line
      x1="40"
      x2="580"
      y1="40"
      y2="40"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="24"
    >
      q0
    </text>
  </g>
</g>
`;

exports[`Testing formatRegisters Multiple quantum registers 1`] = `
<g>
  <g>
    <line
      x1="40"
      x2="180"
      y1="40"
      y2="40"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="24"
    >
      q0
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="180"
      y1="100"
      y2="100"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="84"
    >
      q1
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="180"
      y1="160"
      y2="160"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="144"
    >
      q2
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="180"
      y1="220"
      y2="220"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="204"
    >
      q3
    </text>
  </g>
</g>
`;

exports[`Testing formatRegisters Multiple quantum registers 2`] = `
<g>
  <g>
    <line
      x1="40"
      x2="85"
      y1="40"
      y2="40"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="24"
    >
      q0
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="85"
      y1="100"
      y2="100"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="84"
    >
      q1
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="85"
      y1="160"
      y2="160"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="144"
    >
      q2
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="85"
      y1="220"
      y2="220"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="204"
    >
      q3
    </text>
  </g>
</g>
`;

exports[`Testing formatRegisters Multiple quantum registers 3`] = `
<g>
  <g>
    <line
      x1="40"
      x2="580"
      y1="40"
      y2="40"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="24"
    >
      q0
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="580"
      y1="100"
      y2="100"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="84"
    >
      q1
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="580"
      y1="160"
      y2="160"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="144"
    >
      q2
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="580"
      y1="220"
      y2="220"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="204"
    >
      q3
    </text>
  </g>
</g>
`;

exports[`Testing formatRegisters Quantum and classical registers 1`] = `
<g>
  <g>
    <line
      x1="40"
      x2="180"
      y1="40"
      y2="40"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="24"
    >
      q0
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="180"
      y1="120"
      y2="120"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="104"
    >
      q1
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="180"
      y1="180"
      y2="180"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="164"
    >
      q2
    </text>
  </g>
  <g>
    <line
      class="register-classical"
      x1="81"
      x2="81"
      y1="40"
      y2="79"
    />
    <line
      class="register-classical"
      x1="79"
      x2="79"
      y1="40"
      y2="81"
    />
    <line
      class="register-classical"
      x1="81"
      x2="180"
      y1="79"
      y2="79"
    />
    <line
      class="register-classical"
      x1="79"
      x2="180"
      y1="81"
      y2="81"
    />
  </g>
</g>
`;

exports[`Testing formatRegisters Quantum and classical registers 2`] = `
<g>
  <g>
    <line
      x1="40"
      x2="85"
      y1="40"
      y2="40"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="24"
    >
      q0
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="85"
      y1="120"
      y2="120"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="104"
    >
      q1
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="85"
      y1="180"
      y2="180"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="164"
    >
      q2
    </text>
  </g>
  <g>
    <line
      class="register-classical"
      x1="81"
      x2="81"
      y1="40"
      y2="79"
    />
    <line
      class="register-classical"
      x1="79"
      x2="79"
      y1="40"
      y2="81"
    />
    <line
      class="register-classical"
      x1="81"
      x2="85"
      y1="79"
      y2="79"
    />
    <line
      class="register-classical"
      x1="79"
      x2="85"
      y1="81"
      y2="81"
    />
  </g>
</g>
`;

exports[`Testing formatRegisters Quantum and classical registers 3`] = `
<g>
  <g>
    <line
      x1="40"
      x2="580"
      y1="40"
      y2="40"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="24"
    >
      q0
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="580"
      y1="120"
      y2="120"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="104"
    >
      q1
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="580"
      y1="180"
      y2="180"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="164"
    >
      q2
    </text>
  </g>
  <g>
    <line
      class="register-classical"
      x1="81"
      x2="81"
      y1="40"
      y2="79"
    />
    <line
      class="register-classical"
      x1="79"
      x2="79"
      y1="40"
      y2="81"
    />
    <line
      class="register-classical"
      x1="81"
      x2="580"
      y1="79"
      y2="79"
    />
    <line
      class="register-classical"
      x1="79"
      x2="580"
      y1="81"
      y2="81"
    />
  </g>
</g>
`;

exports[`Testing formatRegisters Quantum and classical registers 4`] = `
<g>
  <g>
    <line
      x1="40"
      x2="180"
      y1="40"
      y2="40"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="24"
    >
      q0
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="180"
      y1="100"
      y2="100"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="84"
    >
      q1
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="180"
      y1="220"
      y2="220"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="204"
    >
      q2
    </text>
  </g>
  <g>
    <line
      class="register-classical"
      x1="81"
      x2="81"
      y1="40"
      y2="79"
    />
    <line
      class="register-classical"
      x1="79"
      x2="79"
      y1="40"
      y2="81"
    />
    <line
      class="register-classical"
      x1="81"
      x2="180"
      y1="79"
      y2="79"
    />
    <line
      class="register-classical"
      x1="79"
      x2="180"
      y1="81"
      y2="81"
    />
  </g>
  <g>
    <line
      class="register-classical"
      x1="81"
      x2="81"
      y1="40"
      y2="119"
    />
    <line
      class="register-classical"
      x1="79"
      x2="79"
      y1="40"
      y2="121"
    />
    <line
      class="register-classical"
      x1="81"
      x2="180"
      y1="119"
      y2="119"
    />
    <line
      class="register-classical"
      x1="79"
      x2="180"
      y1="121"
      y2="121"
    />
  </g>
  <g>
    <line
      class="register-classical"
      x1="81"
      x2="81"
      y1="160"
      y2="199"
    />
    <line
      class="register-classical"
      x1="79"
      x2="79"
      y1="160"
      y2="201"
    />
    <line
      class="register-classical"
      x1="81"
      x2="180"
      y1="199"
      y2="199"
    />
    <line
      class="register-classical"
      x1="79"
      x2="180"
      y1="201"
      y2="201"
    />
  </g>
</g>
`;

exports[`Testing formatRegisters Quantum and classical registers 5`] = `
<g>
  <g>
    <line
      x1="40"
      x2="85"
      y1="40"
      y2="40"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="24"
    >
      q0
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="85"
      y1="100"
      y2="100"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="84"
    >
      q1
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="85"
      y1="220"
      y2="220"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="204"
    >
      q2
    </text>
  </g>
  <g>
    <line
      class="register-classical"
      x1="81"
      x2="81"
      y1="40"
      y2="79"
    />
    <line
      class="register-classical"
      x1="79"
      x2="79"
      y1="40"
      y2="81"
    />
    <line
      class="register-classical"
      x1="81"
      x2="85"
      y1="79"
      y2="79"
    />
    <line
      class="register-classical"
      x1="79"
      x2="85"
      y1="81"
      y2="81"
    />
  </g>
  <g>
    <line
      class="register-classical"
      x1="81"
      x2="81"
      y1="40"
      y2="119"
    />
    <line
      class="register-classical"
      x1="79"
      x2="79"
      y1="40"
      y2="121"
    />
    <line
      class="register-classical"
      x1="81"
      x2="85"
      y1="119"
      y2="119"
    />
    <line
      class="register-classical"
      x1="79"
      x2="85"
      y1="121"
      y2="121"
    />
  </g>
  <g>
    <line
      class="register-classical"
      x1="81"
      x2="81"
      y1="160"
      y2="199"
    />
    <line
      class="register-classical"
      x1="79"
      x2="79"
      y1="160"
      y2="201"
    />
    <line
      class="register-classical"
      x1="81"
      x2="85"
      y1="199"
      y2="199"
    />
    <line
      class="register-classical"
      x1="79"
      x2="85"
      y1="201"
      y2="201"
    />
  </g>
</g>
`;

exports[`Testing formatRegisters Quantum and classical registers 6`] = `
<g>
  <g>
    <line
      x1="40"
      x2="580"
      y1="40"
      y2="40"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="24"
    >
      q0
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="580"
      y1="100"
      y2="100"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="84"
    >
      q1
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="580"
      y1="220"
      y2="220"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="204"
    >
      q2
    </text>
  </g>
  <g>
    <line
      class="register-classical"
      x1="81"
      x2="81"
      y1="40"
      y2="79"
    />
    <line
      class="register-classical"
      x1="79"
      x2="79"
      y1="40"
      y2="81"
    />
    <line
      class="register-classical"
      x1="81"
      x2="580"
      y1="79"
      y2="79"
    />
    <line
      class="register-classical"
      x1="79"
      x2="580"
      y1="81"
      y2="81"
    />
  </g>
  <g>
    <line
      class="register-classical"
      x1="81"
      x2="81"
      y1="40"
      y2="119"
    />
    <line
      class="register-classical"
      x1="79"
      x2="79"
      y1="40"
      y2="121"
    />
    <line
      class="register-classical"
      x1="81"
      x2="580"
      y1="119"
      y2="119"
    />
    <line
      class="register-classical"
      x1="79"
      x2="580"
      y1="121"
      y2="121"
    />
  </g>
  <g>
    <line
      class="register-classical"
      x1="81"
      x2="81"
      y1="160"
      y2="199"
    />
    <line
      class="register-classical"
      x1="79"
      x2="79"
      y1="160"
      y2="201"
    />
    <line
      class="register-classical"
      x1="81"
      x2="580"
      y1="199"
      y2="199"
    />
    <line
      class="register-classical"
      x1="79"
      x2="580"
      y1="201"
      y2="201"
    />
  </g>
</g>
`;

exports[`Testing formatRegisters Skipped quantum registers 1`] = `
<g>
  <g>
    <line
      x1="40"
      x2="180"
      y1="40"
      y2="40"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="24"
    >
      q0
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="180"
      y1="160"
      y2="160"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="144"
    >
      q2
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="180"
      y1="220"
      y2="220"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="204"
    >
      q3
    </text>
  </g>
</g>
`;

exports[`Testing formatRegisters Skipped quantum registers 2`] = `
<g>
  <g>
    <line
      x1="40"
      x2="85"
      y1="40"
      y2="40"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="24"
    >
      q0
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="85"
      y1="160"
      y2="160"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="144"
    >
      q2
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="85"
      y1="220"
      y2="220"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="204"
    >
      q3
    </text>
  </g>
</g>
`;

exports[`Testing formatRegisters Skipped quantum registers 3`] = `
<g>
  <g>
    <line
      x1="40"
      x2="580"
      y1="40"
      y2="40"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="24"
    >
      q0
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="580"
      y1="160"
      y2="160"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="144"
    >
      q2
    </text>
  </g>
  <g>
    <line
      x1="40"
      x2="580"
      y1="220"
      y2="220"
    />
    <text
      dominant-baseline="hanging"
      font-size="75%"
      text-anchor="start"
      x="40"
      y="204"
    >
      q3
    </text>
  </g>
</g>
`;
